# ChangeLog for app-cdr/cdrtools
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.194 2007/11/14 17:53:33 jer Exp $

  14 Nov 2007; Jeroen Roovers <jer@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild:
  Stable for HPPA (bug #197665).

*cdrtools-2.01.01_alpha36 (11 Nov 2007)

  11 Nov 2007; Lars Weiler <pylon@gentoo.org>
  -files/cdrtools-2.01.01a03-rezero.patch,
  -files/cdrtools-2.01a27-writemode.patch, -cdrtools-2.01.01_alpha32.ebuild,
  +cdrtools-2.01.01_alpha36.ebuild:
  Version bump; bug #193544.  Cleaned out old version.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild:
  amd64 stable wrt #197665, thanks to Kenneth Prugh for testing.

  07 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild:
  alpha stable wrt #197665, thanks to Tobias Klausmann

  06 Nov 2007; Markus Rothe <corsair@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild:
  Stable on ppc64; bug #197665

  03 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild:
  ia64 stable wrt #197665

  02 Nov 2007; Lars Weiler <pylon@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild:
  stable ppc, bug #197665

  01 Nov 2007; Ferris McCormick <fmccor@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild:
  Stable for sparc, Bug #197665

  31 Oct 2007; Dawid Węgliński <cla@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild:
  Stable on x86 (bug #197665)

  28 Aug 2007; Samuli Suominen <drac@gentoo.org>
  +files/cdrtools-2.01.01_alpha34-asneeded.patch,
  cdrtools-2.01.01_alpha34.ebuild:
  Fix building with -Wl,--as-needed, bug 190180.

*cdrtools-2.01.01_alpha34 (24 Aug 2007)

  24 Aug 2007; Lars Weiler <pylon@gentoo.org>
  +cdrtools-2.01.01_alpha34.ebuild:
  Version bump with dynamic linking; thanks to Sebastian in bug #189981.

  04 Aug 2007; Lars Weiler <pylon@gentoo.org>
  -cdrtools-2.01.01_alpha10.ebuild, -cdrtools-2.01.01_alpha27.ebuild,