@@ -9,6 +9,7 @@ DIST cdrtools-2.01.01a34.tar.bz2 1661093 RMD160 f7336d304ffcb28124d3ee3fd3fc8d6e
 DIST cdrtools-2.01.01a36.tar.bz2 1664644 RMD160 12ad5e9cf28d620c97e3aa8523851c2fb10eac00 SHA1 581c608395310c518d01a6fdc3fb88ec7d37e1f3 SHA256 2271ffad792fe01b04a7cc472c3ea6511997a1ba5e6060816faaa0d4ab9b481e
 EBUILD cdrtools-2.01.01_alpha25.ebuild 3670 RMD160 690e26885efb411d5bafd9a0898840d32cb804e8 SHA1 4029ae29f16b52d73ea90a31827492e22cdc0681 SHA256 08b8da5a9e162932ca4daeec00588d6cf9c7e2fcc3d4a0d53bd712abd61354fc
 EBUILD cdrtools-2.01.01_alpha34.ebuild 3635 RMD160 dd01033837d06c0ba873054f5a4129273265e99c SHA1 e2f8b1d41c69a84cd023c66f11400fcea448472b SHA256 7285b7f47e5eda67ad374bb4eb33a38361614ff5c77cf877c848d8f6f86dd4c7
+EBUILD cdrtools-2.01.01_alpha36-r1.ebuild 3671 RMD160 9b7bcad9bf87651b548d5e9ddd946719192fd105 SHA1 2ee3c082d679d845f90631d7a2fbe0998d546e65 SHA256 e6ddb6fa8fe7ca4cd912901288984b0487950e244428c2cdab71bbc8c8a9dc63
 EBUILD cdrtools-2.01.01_alpha36.ebuild 3650 RMD160 aaeee97555fb8758f41747d60739fe8f22dca540 SHA1 4bcecfe860bdcb4c5f8c6e4ca650485209d3014f SHA256 4b7b4ed35a8cf78e441d3c1e510ec7a001b72142cfe7b7e384fbeec61edc437a
-MISC ChangeLog 29091 RMD160 10b9016bf12dd782524aa74f998fd3082372cf9f SHA1 5ce75c082863b17fbb52605fdd5824319fd6cb9c SHA256 8d39c6f622bff178818a69cb17599fb5b7131b0a43605a44bd283c3dde276e24
+MISC ChangeLog 29272 RMD160 8ac62db14235c783f6744180945b5f25677947c0 SHA1 cdf16eab836cebbd7d48672d96fdb7e681d8250b SHA256 f462fe9afef1352d596c7706a28c7260d4fab70700ec12cf710d4ca0d2f8c2bc
 MISC metadata.xml 254 RMD160 f274a70fa23d8064efddcce296e0aed3344bd86b SHA1 ab52ea446603ae6242dae41e0c90fcf7ae8f09cf SHA256 21400abf2dad3e5b7b0d2f7f9586c33cba6336b42a97e1f2b3e7e8b9db0daae5
