@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/cdrtools
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.194 2007/11/14 17:53:33 jer Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.195 2008/01/05 06:15:22 beandog Exp $
+
+*cdrtools-2.01.01_alpha36-r1 (05 Jan 2008)
+
+  05 Jan 2008; Steve Dibb <beandog@gentoo.org>
+  +cdrtools-2.01.01_alpha36-r1.ebuild:
+  Add dependency for sys-apps/acl, bug 198779
 
   14 Nov 2007; Jeroen Roovers <jer@gentoo.org>
   cdrtools-2.01.01_alpha34.ebuild:
